# etf-volatility-harvest

./: .gitignore  Makefile  README.md  algo.py  helpers.py  pyproject.toml
.github/workflows/: ephemeral-daily-run.yml
backtest/analysis/: vol_harvest_triplet_gridsearch.ipynb  vol_harvest_triplet_scanner.ipynb
backtest/strategy/: volatility-harvester-triplet.ipynb
docker/: Dockerfile  docker-compose.ci.yml  docker-compose.local.yml
infra/do-functions/: .env.example  project.yml
scheduler/: run.sh
